# vaes

./: .gitignore  VAE.ipynb  main.py  main_vqvae.py  pyproject.toml  test.py  test_vqvae.py
models/: modelling_dvae.py  modelling_vqvae.py
trainer/: scheduler.py  training_engine.py  training_engine_dvae.py  training_engine_vqvae.py
